--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.americanexpress.hackathon.api</groupId>
-	<artifactId>ExpenseReportPushAPI</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<inceptionYear>2014</inceptionYear>
+
+	<groupId>com.americanexpress.hackthon.services</groupId>
+	<artifactId>Hackathon-service</artifactId>
+	<version>0.1.0</version>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		<version>2.0.5.RELEASE</version>
 	</parent>
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-boot-maven-plugin.version>1.5.4.RELEASE</spring-boot-maven-plugin.version>
 	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -29,13 +30,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.notnoop.apns/apns -->
-		<dependency>
-			<groupId>com.notnoop.apns</groupId>
-			<artifactId>apns</artifactId>
-			<version>0.2.3</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jetty</artifactId>
